# 3SpacePythonPackage

./: README.md  pyproject.toml
Examples/: embedded_2024_dec_20.xml  example_ble.py  example_commands.py  example_component_specific_settings_and_commands.py  example_firmware_upload.py  example_parsing_log_data.py  example_parsing_stored_binary.py  example_read_settings.py  example_streaming.py  example_streaming_manager.py  example_write_settings.py
src/yostlabs/communication/: base.py  ble.py  bluetooth.py  serial.py
src/yostlabs/math/: __init__.py  axes.py  quaternion.py  vector.py
src/yostlabs/tss3/: api.py  consts.py
src/yostlabs/tss3/utils/: calibration.py  parser.py  streaming.py  version.py
