[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yostlabs"
#If uploading again on the same day, add a fourth number
version = "2026.2.23.dev1"
authors = [
  { name="Yost Labs Inc.", email="techsupport@yostlabs.com" },
  { name="Andy Riedlinger", email="techsupport@yostlabs.com" },
]
description = "Python resources and API for 3Space sensors from Yost Labs Inc."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["3space", "threespace", "yost"]
dependencies = [
  "pyserial",
  "numpy",
  "bleak",
  "async-timeout"
]

# [project.optional-dependencies]
# Pypi does not allow direct dependencies, however pybluez2 pypi
# install does not work for newer versions of python.
# Leaving this here as docummentation of the requirement without
# making it part of the pypi package.
# bluetooth = [
#   "pybluez2 @ git+https://github.com/airgproducts/pybluez2.git"
# ]

[project.urls]
Homepage = "https://yostlabs.com/"
Repository = "https://github.com/YostLabs/3SpacePythonPackage/tree/main"
Issues = "https://github.com/YostLabs/3SpacePythonPackage/issues"